fix ui on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,3 +1,5 @@
+// imports
+
 // colours
 $color-green: #007B14;
 $color-yellow: #fa0;
@@ -35,6 +37,8 @@ body {
 }
 
 .leaderboard-item__container{
+		display: flex;
+		flex: 1;
 	display: flex;
 	padding-left:8px;
 	padding-right:8px;
@@ -49,7 +53,14 @@ body {
 .leaderboard-user__text{
 	font-size: 27px;
 	color: #000000;
-	font-weight:600
+	font-weight:600;
+
+}
+.leaderboard-user__subtext {
+	font-size: 20px;
+	color: #ccc;
+	font-weight: 700;
+	margin-left: 4px
 }
 
 .leaderboard-status {
@@ -86,6 +97,28 @@ body {
 	font-weight:800
 }
 
+.leaderboard-status--mobile {
+	display: none;
+	flex: 1;
+	width: 100%;
+	text-align: center;
+	
+}
+.leaderboard-status--desktop{
+	display: block;
+}
+@media only screen and (max-width: 402px) {
+	.leaderboard-status--mobile {
+		display: block;
+	}
+	.leaderboard-status--desktop{
+		display: none;
+	}
+	.leaderboard-item__container{
+		flex-direction: column; 
+		padding-right: 16px
+	}
+}
 .button{
 	background: #FFFFFF;
 	border: 2px solid #000000;
